...
             })
        
        webView.navigationDelegate = self
        presenter?.viewDidLoad()
        configureBackButton()
        //        loadAuthView()
        webView.accessibilityIdentifier = "UnsplashWebView"
    }
    
    override func viewDidAppear(_ animated: Bool) {
        super.viewDidAppear(animated)
        presenter?.didUpdateProgressValue(webView.estimatedProgress)
    }
...
